--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
       <div class="main">
       <div class="profile">
         <!-- <img src="desert.jpg" alt="my first app" width="120px" height="120px">
-        <h3>Sai</h3>
-        <h3>sai99@gmail.com</h3>
-        <h3>998877445566</h3>
+        <h3>manaskanth</h3>
+        <h3>manaskanthkalagara@gmail.com</h3>
+        <h3>998148542515</h3>
         <hr> -->
         <div class="contact">
           <!-- <h1>Address</h1>
-          <h3>s/o Venkateswararao
+          <h3>s/o srinivasaarao
           <br>
-          Kkota
+          eluru
           <br>
           West Godavari District
           <br>
